[controller] Add device diagnostics
